--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-#entire .idea folder
-.idea
-
-
 # User-specific stuff
 .idea/**/workspace.xml
 .idea/**/tasks.xml
@@ -81,8 +77,8 @@ fabric.properties
 # Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
 
 # *.iml
-# modules.xml
-# .idea/misc.xml
+modules.xml
+.idea/misc.xml
 # *.ipr
 
 # Sonarlint plugin
